2011-08-09  Ethan A Merritt  <merritt@u.washington.edu>

	* PORTING config/config.cyg config/config.dj2 config/config.mgw 
	config/config.nt config/config.os2 config/config.oww
	config/makefile.unx configure.in configure.vms docs/Makefile.in
	docs/doc2texi.el docs/gpcard.tex src/Makefile.am src/makefile.all 
	src/makefile.awc src/rgipgnu src/term.h term/rgip.trm 

	Remove code specific to the rgip terminal (Redwood Graphics Interface
	Protocol). The company (uniplex) supporting this protocol no longer
	exists.  The terminal itself no longer compiles cleanly, and valgrind
	shows many buffer overflows and alloc/free errors.
	19 files changed, 13 insertions(+), 841 deletions(-)

2011-08-02  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/plotstyles.gnu docs/gnuplot.doc term/be.trm term/canvas.trm
	term/cgm.trm term/ai.trm term/aquaterm.trm term/cgi.trm:
	Documentation updates

	* src/wxterminal/wxt_gui.cpp (OnCreateWindow):  It is not acceptable
	to have every new plot window occlude the center of the screen.

2011-08-01  Micha Wiedenmann  <mw-u2@gmx.de>

	* src/eval.h src/eval.c (get_udv_by_name free_at) src/show.c (disp_at) 
	src/internal.h src/internal.c (f_sum) src/parse.c (parse_sum_expression)
	docs/gnuplot.doc demo/bivariat.dem:

	New expression type for summation:
	    sum [<var> = <beg> : <end>] <something>

2011-07-30  Stefan Reiser  <stefanreiser@users.sourceforge.net>

	* src/win/wgraph.c (WriteGraphIni): Fix spelling of "Antialiasing"
	field. Bug #3382732

2011-07-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_impulses): Skip UNDEFINED points.
	Bug #3382469

2011-07-28  Bastian Maerkisch  <bmaerkisch@web.de>

	*src/win/wgraph.c (GraphEnhancedOpen, GraphEnhancedFlush): Fix sign
	error in placement of rotated enhanced text with sub-/superscripts.

2011-07-27  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm:  Handle multiple overprint characters, albeit not
	the way people probably expect.
	Bug #3371782
