@@ -1,3 +1,8 @@
+2011-08-15  Reinier Heeres  <rheeres@users.sourceforge.net>
+
+	* src/win/pgnuplot.c: Detect termination of wgnuplot. Slightly enhanced
+	version of SF patch #2373741.
+
 2011-08-09  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* PORTING config/config.cyg config/config.dj2 config/config.mgw 
